--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,8 +22,9 @@ h1 {
     text-align: center;
     padding: 20px;
     font-size: 70px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     font-weight: bolder;
+    text-transform: uppercase;
 }
 #hint, h2 {
     color: white;
@@ -46,4 +47,26 @@ h1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bolder;
     margin-top: 20px;
+}
+#stats {
+    margin-top: 70px;
+}
+#startOver {
+    color: white;
+    background-color: black;
+    text-align: center;
+    font-size: 40px;
+    font-family: cursive;
+    font-weight: bolder;
+    float:right;
+    margin-right: 10px;
+}
+img {
+    display:none;
+    margin-left: auto;
+    margin-right:200px;
+    margin-top: 100px;
+}
+#lettersGuessed {
+    text-transform: uppercase;
 }
